--- a/src/main/resources/connection.properties
+++ b/src/main/resources/connection.properties
@@ -1,4 +1,4 @@
-driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/eeshopping?useSSL=false
+driver=com.mysql.cj.jdbc.Driver
+url=jdbc:mysql://localhost:3306/eeshopping
 username=username
 password=password
