--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,4 @@ spring.main.banner-mode=off
 logging.level.root=info
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/eeshopping
-spring.datasource.username=root
-spring.datasource.password=root
+spring.config.import=credentials.properties
