--- a/.github/workflows/mavenTest.yml
+++ b/.github/workflows/mavenTest.yml
@@ -23,4 +23,4 @@ jobs:
           distribution: 'adopt'
           cache: maven
       - name: Test with Maven
-        run: mvn -B -U verify --file backend/pom.xml
+        run: mvn -B -U verify --file pom.xml
