--- a/customer-service/pom.xml
+++ b/customer-service/pom.xml
@@ -60,6 +60,13 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.200</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.jparams</groupId>
             <artifactId>to-string-verifier</artifactId>
             <version>1.4.8</version>
