--- a/product-service/src/test/resources/application.properties
+++ b/product-service/src/test/resources/application.properties
@@ -1,7 +1,10 @@
-server.port=8088
-spring.application.name=Category-Service
-spring.datasource.url=jdbc:mysql://localhost:3306/eeshopping
-optional:spring.config.import=credentials.properties
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=none
+server.port=8091
+spring.application.name=Product-Service
+spring.datasource.url=jdbc:h2:mem:test
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create
+#Disable discovery
+spring.cloud.discovery.enabled=false
+#Disable cloud config and config discovery
+spring.cloud.config.discovery.enabled=false
+spring.cloud.config.enabled=false
