--- a/customer-service/src/main/resources/application.properties
+++ b/customer-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8089
 spring.application.name=Customer-Service
-spring.datasource.url=jdbc:mysql://localhost:3306/eeshopping
+spring.datasource.url=jdbc:mysql://localhost:3306/eeshopping?createDatabaseIfNotExist=true
 spring.config.import=credentials.properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
