--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -20,6 +20,7 @@ artifacts:
     - order-service/target/order-service-0.0.1-SNAPSHOT.jar
     - product-service/target/product-service-0.0.1-SNAPSHOT.jar
     - eureka-server/target/eureka-server-0.0.1-SNAPSHOT.jar
+    - Procfile
   discard-paths: yes
 
 
