test deploy with one jar

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,11 +16,11 @@ phases:
       - mvn package
 artifacts:
   files:
-    - customer-service/target/customer-service-0.0.1-SNAPSHOT.jar
-    - order-service/target/order-service-0.0.1-SNAPSHOT.jar
+#    - customer-service/target/customer-service-0.0.1-SNAPSHOT.jar
+#    - order-service/target/order-service-0.0.1-SNAPSHOT.jar
     - product-service/target/product-service-0.0.1-SNAPSHOT.jar
-    - eureka-server/target/eureka-server-0.0.1-SNAPSHOT.jar
-    - Procfile
+#    - eureka-server/target/eureka-server-0.0.1-SNAPSHOT.jar
+#    - Procfile
   discard-paths: yes
 
 
