--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.config.import=credentials.properties
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+#testing
+#Disable discovery
+spring.cloud.discovery.enabled=false
+#Disable cloud config and config discovery
+spring.cloud.config.discovery.enabled=false
+spring.cloud.config.enabled=false
