--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #testing
 #Disable discovery
-spring.cloud.discovery.enabled=false
+#spring.cloud.discovery.enabled=false
 #Disable cloud config and config discovery
-spring.cloud.config.discovery.enabled=false
-spring.cloud.config.enabled=false
+#spring.cloud.config.discovery.enabled=false
+#spring.cloud.config.enabled=false
