--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-server.port=8091
+server.port=5000
 spring.application.name=Product-Service
-spring.datasource.url=jdbc:mysql://localhost:3306/eeshopping?createDatabaseIfNotExist=true
-spring.config.import=credentials.properties
+
+spring.datasource.driver = com.mysql.jdbc.Driver
+spring.datasource.url = jdbc:mysql://developer-rds-instance-1.cfqctdytya09.us-east-2.rds.amazonaws.com/zion_mantey?createDatabaseIfNotExist=true
+spring.datasource.username = admin
+spring.datasource.password = password-1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto = update
 
 #testing
 #Disable discovery
