--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,16 +3,9 @@ spring.application.name=Product-Service
 
 spring.datasource.driver = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://developer-rds-instance-1.cfqctdytya09.us-east-2.rds.amazonaws.com/zion_mantey?createDatabaseIfNotExist=true
-spring.datasource.username = admin
-spring.datasource.password = password-1
+spring.datasource.username = ${datasource.username}
+spring.datasource.password = ${datasource.password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
-
-#testing
-#Disable discovery
-#spring.cloud.discovery.enabled=false
-#Disable cloud config and config discovery
-#spring.cloud.config.discovery.enabled=false
-#spring.cloud.config.enabled=false
