--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 server.port=5000
 spring.application.name=Product-Service
 
+spring.datasource.url = jdbc:mysql://${DATASOURCE_URL}}/zion_mantey?createDatabaseIfNotExist=true
+spring.datasource.username = ${DATASOURCE_USERNAME}
+spring.datasource.password = ${DATASOURCE_PASSWORD}
 spring.datasource.driver = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://developer-rds-instance-1.cfqctdytya09.us-east-2.rds.amazonaws.com/zion_mantey?createDatabaseIfNotExist=true
-spring.datasource.username = ${datasource.username}
-spring.datasource.password = ${datasource.password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
