--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=5000
 spring.application.name=Product-Service
 
-spring.datasource.url = jdbc:mysql://${DATASOURCE_URL}}/zion_mantey?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://${DATASOURCE_URL}/zion_mantey?createDatabaseIfNotExist=true
 spring.datasource.username = ${DATASOURCE_USERNAME}
 spring.datasource.password = ${DATASOURCE_PASSWORD}
 spring.datasource.driver = com.mysql.jdbc.Driver
