--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,3 +8,5 @@ spring.cloud.discovery.enabled=false
 #Disable cloud config and config discovery
 spring.cloud.config.discovery.enabled=false
 spring.cloud.config.enabled=false
+auth0.audience=https://zion.ee-cognizantacademy.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-1en1mmfn.us.auth0.com/
