--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 server.port=5000
 spring.application.name=Cart-Service
-
-spring.datasource.url = jdbc:mysql://${DATASOURCE_URL}/zion_mantey?createDatabaseIfNotExist=true
-spring.datasource.username = ${DATASOURCE_USERNAME}
-spring.datasource.password = ${DATASOURCE_PASSWORD}
-spring.datasource.driver = com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${DATASOURCE_URL}/zion_mantey?createDatabaseIfNotExist=true
+spring.datasource.username=${DATASOURCE_USERNAME}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.driver=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto=update
+auth0.audience=https://zion.ee-cognizantacademy.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-1en1mmfn.us.auth0.com/
